--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -1,4 +1,4 @@
-﻿@model MIST143_Traveler.MViewModel.CProductMemberViewModel
+﻿@model MIST143_Traveler.ShoppingViewModel.CShoppingCartViewModel
 
 @{
     ViewData["Title"] = "PayData";
@@ -7,9 +7,6 @@
 @section Styles{
     <link rel="stylesheet" href="~/css/travelOrder.css" />
 }
-@{
-    decimal TotalPrice =Model.產品會員.FirstOrDefault().Price * Model.產品會員.FirstOrDefault().Count;
- }
 <nav>
     <div class="secondary-nav payTimeLine">
         <div class="icon">
@@ -39,65 +36,67 @@
                             <div class="mainTitle">填寫資料</div>
                             <div class="border-bottom-line"></div>
                             <div class="infoTitle hasTag">預定資料</div>
-                            <div class="infoBoxOuter">
+                            @foreach (var item in Model._CShoppingCartDetailViewModel)
+                            {
+                                <div class="infoBoxOuter">
 
-                                <div class="infoBoxInner reserveBlock">
-                                    <div class="imgBox">
-                                        <img src="https://localhost:44338/images/TravelProductPictures/@Model.產品會員.FirstOrDefault().productpictures.FirstOrDefault().TravelPicture1"
-                                             class="rounded float-start" alt="...">
-                                    </div>
-                                    <div class="infoBox">
-                                        <div class="titleFontStyle">@Model.產品會員.FirstOrDefault().TravelProductName</div>
-                                        @*<div class="subText">@Model.產品列表.FirstOrDefault().EventIntroduction</div>*@
+                                    <div class="infoBoxInner reserveBlock">
+                                        <div class="imgBox">
+                                            <img src="https://localhost:44338/images/TravelProductPictures/@item.Productpicture"
+                                                 class="rounded float-start" alt="...">
+                                        </div>
+                                        <div class="infoBox">
+                                            <div class="titleFontStyle">@item.TravelProductName</div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            }
                             @*<div class="infoTitle mt-4">參加人資料</div>
-                            <div class="infoBoxOuter">
-                                <div class="infoBoxInner">
-                                    <div class="titleFontStyle">成人</div>
-                                    <div class="payUserRow">
-                                        <div class="payUser active">
-                                            林恆佑
-                                        </div>
-                                        <div class="payUser" data-bs-toggle="modal" data-bs-target="#joinModal">
-                                            + 新增
-                                        </div>
-                                    </div>
-                                    <div class="userInfoBox">
-                                        <div class="leftUserInfoBox">
-                                            <div>姓名</div>
-                                            <div>生日</div>
-                                            <div>身分證件號碼</div>
-                                        </div>
-                                        <div class="rightUserInfoBox">
-                                            <div>林恆佑</div>
-                                            <div>2000/1/1</div>
-                                            <div>A123456789</div>
-                                        </div>
-                                        <div class="editBox">
-                                            <button type="button" class="btn btn-main-outline" data-bs-toggle="modal"
-                                                    data-bs-target="#joinModal">
-                                                編輯
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>*@
+                <div class="infoBoxOuter">
+                    <div class="infoBoxInner">
+                        <div class="titleFontStyle">成人</div>
+                        <div class="payUserRow">
+                            <div class="payUser active">
+                                林恆佑
+                            </div>
+                            <div class="payUser" data-bs-toggle="modal" data-bs-target="#joinModal">
+                                + 新增
+                            </div>
+                        </div>
+                        <div class="userInfoBox">
+                            <div class="leftUserInfoBox">
+                                <div>姓名</div>
+                                <div>生日</div>
+                                <div>身分證件號碼</div>
+                            </div>
+                            <div class="rightUserInfoBox">
+                                <div>林恆佑</div>
+                                <div>2000/1/1</div>
+                                <div>A123456789</div>
+                            </div>
+                            <div class="editBox">
+                                <button type="button" class="btn btn-main-outline" data-bs-toggle="modal"
+                                        data-bs-target="#joinModal">
+                                    編輯
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>*@
                             @*<div class="infoTitle mt-4">其他附加資訊</div>
-                            <div class="p-3 pt-0">
-                                <div>聯絡電話 <span class="color-main"> *</span></div>
-                                <div class="mb-3">
-                                    <input type="tel" class="form-control" placeholder="例: +886900000099">
-                                </div>
-                            </div>*@
+                <div class="p-3 pt-0">
+                    <div>聯絡電話 <span class="color-main"> *</span></div>
+                    <div class="mb-3">
+                        <input type="tel" class="form-control" placeholder="例: +886900000099">
+                    </div>
+                </div>*@
                             <div class="infoTitle hasTag">聯絡資料</div>
                             <div class="subInfoText ps-3">如訂單有變動，我們將通知您</div>
                             <div class="infoBoxOuter">
                                 <div class="infoBoxInner">
                                     <div class="payUserRow">
                                         <div class="payUser active">
-                                            @Model.產品會員.FirstOrDefault().MemberName
+                                            @Model.MemberName
                                         </div>
                                         <div class="payUser" data-bs-toggle="modal" data-bs-target="#contentModal">
                                             + 新增
@@ -110,9 +109,9 @@
                                             <div>電子郵件</div>
                                         </div>
                                         <div class="rightUserInfoBox">
-                                            <div>@Model.產品會員.FirstOrDefault().MemberName</div>
-                                            <div>@Model.產品會員.FirstOrDefault().Phone</div>
-                                            <div>@Model.產品會員.FirstOrDefault().Email</div>
+                                            <div>@Model.MemberName</div>
+                                            <div>@Model.Phone</div>
+                                            <div>@Model.Email</div>
                                         </div>
                                         <div class="editBox">
                                             <button type="button" class="btn btn-main-outline" data-bs-toggle="modal"
@@ -128,78 +127,93 @@
                             </div>
                             <div class="payInfoRow p-3">
                                 <div>點擊「前往付款」，訂單即送出，請於下一步選擇付款方式</div>
-                                <input type="hidden" name="TravelProductId" value="@Model.產品會員.FirstOrDefault().TravelProductId" />
+                                <input type="hidden" asp-for="MemberName" value="@Model.MemberName" />
+                                <input type="hidden" asp-for="Email" value="@Model.Email" />
+                                <input type="hidden" asp-for="Phone" value="@Model.Phone" />
+                                @for (int i = 0; i < Model._CShoppingCartDetailViewModel.Count; i++)
+                                {
+                                    <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].TravelProductId" value="@Model._CShoppingCartDetailViewModel[i].TravelProductId" />
+                                    <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].TravelProductName" value="@Model._CShoppingCartDetailViewModel[i].TravelProductName" />
+                                    <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].Count" value="@Model._CShoppingCartDetailViewModel[i].Count" />
+                                    <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].Price" value="@Model._CShoppingCartDetailViewModel[i].Price" />
+                                    <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].TotalPrice" value="@Model._CShoppingCartDetailViewModel[i].TotalPrice" />
+                                    <input type="hidden" asp-for="_CShoppingCartDetailViewModel[i].Productpicture" value="@Model._CShoppingCartDetailViewModel[i].Productpicture" />
+                                }
                                 <input type="submit" value="前往付款" class="btn btn-main " />
                             </div>
                         </div>
                     </div>
                     <div class="col-4 ">
-                        <div class="rightSide ">
-                            <div class="titleFontStyle">@Model.產品會員.FirstOrDefault().TravelProductName</div>
-                            @*<div class="subtext">@Model.產品列表.FirstOrDefault().EventIntroduction</div>*@
-                            <div class="border-bottom-line"></div>
-                            @*<div class="infoRow">
-            <div class="subInfoText">日期</div>
-            <div>2022年10月11日 10:00 上午</div>
-        </div>*@
-                            <div class="infoRow">
-                                <div class="subInfoText">數量</div>
-                                <div>@Model.產品會員.FirstOrDefault().Count x 成人</div>
-                                <input type="hidden" name="Count" value="@Model.產品會員.FirstOrDefault().Count" />
+                        @foreach (var item in Model._CShoppingCartDetailViewModel)
+                        {
+
+                            <div class="rightSide ">
+                                <div class="titleFontStyle">@item.TravelProductName</div>
+                                <div class="border-bottom-line"></div>
+                                <div class="infoRow">
+                                    <div class="subInfoText">數量</div>
+                                    <div>@item.Count x 成人</div>
+                                </div>
+                                <div class="border-bottom-line"></div>
+                                <div class="infoRow">
+                                    <div class="subInfoText">單價</div>
+                                    <div class="titleFontStyle">NT$ @item.Price.ToString("###,###,##0")</div>
+                                </div>
+                                <div class="border-bottom-line"></div>
+                                <div class="infoRow">
+                                    <div class="subInfoText">總價</div>
+                                    <div class="titleFontStyle">NT$ @item.TotalPrice.ToString("###,###,##0")</div>
+                                </div>
                             </div>
-                            <div class="border-bottom-line"></div>
-                            <div class="infoRow">
-                                <div class="subInfoText">單價</div>
-                                <div class="titleFontStyle">NT$ @Model.產品會員.FirstOrDefault().Price.ToString("###,###,##0")</div>
-                                <input type="hidden" name="UnitPrice" value="@Model.產品會員.FirstOrDefault().Price.ToString("###,###,##0")" />
-                            </div>
-                            <div class="border-bottom-line"></div>
-                            <div class="infoRow">
-                                <div class="subInfoText">總價</div>
-                                <div class="titleFontStyle">NT$ @TotalPrice.ToString("###,###,##0")</div>
-                            </div>
+
+                        }
+                    <div class="rightSide ">
+                        <div class="infoRow">
+                            <div class="subInfoText">總價</div>
+                            <div class="titleFontStyle"></div>
                         </div>
                     </div>
-                </div>
+                        </div>
+                    </div>
             </div>
         </form>
         <!-- 編輯參加人彈窗 -->
         @*<div class="modal fade" id="joinModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-             aria-hidden="true" style="display: none;">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <button type="button" class="btn-close modalClose " data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                    <div class="infoTitle mt-4">編輯參加人資料</div>
-                    <div class="border-bottom-line"></div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="mb-3">
-                                <label class="col-form-label">姓名:<span class="color-main"> *</span></label>
-                                <input type="text" class="form-control" value="">
-                            </div>
-                            <div class="mb-3">
-                                <label class="col-form-label">生日:<span class="color-main"> *</span></label>
-                                <input type="date" id="start" name="trip-start" class="form-control"
-                                       value="2018-07-22" min="2018-01-01" max="2018-12-31">
-                            </div>
-                            <div class="mb-3">
-                                <label class="col-form-label">
-                                    身分證件號碼（台灣身分證）:<span class="color-main">
-                                        *
-                                    </span>
-                                </label>
-                                <input type="text" class="form-control">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary">儲存</button>
+                 aria-hidden="true" style="display: none;">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <button type="button" class="btn-close modalClose " data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        <div class="infoTitle mt-4">編輯參加人資料</div>
+                        <div class="border-bottom-line"></div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label class="col-form-label">姓名:<span class="color-main"> *</span></label>
+                                    <input type="text" class="form-control" value="">
+                                </div>
+                                <div class="mb-3">
+                                    <label class="col-form-label">生日:<span class="color-main"> *</span></label>
+                                    <input type="date" id="start" name="trip-start" class="form-control"
+                                           value="2018-07-22" min="2018-01-01" max="2018-12-31">
+                                </div>
+                                <div class="mb-3">
+                                    <label class="col-form-label">
+                                        身分證件號碼（台灣身分證）:<span class="color-main">
+                                            *
+                                        </span>
+                                    </label>
+                                    <input type="text" class="form-control">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                            <button type="button" class="btn btn-primary">儲存</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>*@
+            </div>*@
         <!-- 編輯聯絡資料彈窗 -->
         <div class="modal fade" id="contentModal" tabindex="-1" aria-labelledby="exampleModalLabel"
              aria-hidden="true" style="display: none;">
@@ -213,7 +227,7 @@
 
                         <div class="mb-3">
                             <label class="col-form-label">姓名:<span class="color-main"> *</span></label>
-                            <input type="text" class="form-control" value="@Model.產品會員.FirstOrDefault().MemberName">
+                            <input type="text" class="form-control" value="@Model.MemberName">
 
                         </div>
                         <div class="mb-3">
@@ -222,7 +236,7 @@
                                     *
                                 </span>
                             </label>
-                            <input type="text" class="form-control" value="@Model.產品會員.FirstOrDefault().Phone">
+                            <input type="text" class="form-control" value="@Model.Phone">
                         </div>
                         <div class="mb-3">
                             <label class="col-form-label">
@@ -230,7 +244,7 @@
                                     *
                                 </span>
                             </label>
-                            <input type="text" class="form-control" value="@Model.產品會員.FirstOrDefault().Email">
+                            <input type="text" class="form-control" value="@Model.Email">
                         </div>
                     </div>
                     <div class="modal-footer">
