--- a/MIST143_Traveler/Views/CustomerCenter/Forgetpas.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Forgetpas.cshtml
@@ -5,7 +5,7 @@
 @section Styles{
 
 }
-<link href="~/css/忘記密碼頁.css"  rel="stylesheet" />
+<link href="~/css/忘記密碼頁.css" rel="stylesheet" />
 
 <body>
     <div class="container col-6 text-center p-5 下邊界">
@@ -14,8 +14,8 @@
             <p class="小字體">輸入你用以創建Star帳號的電郵地址，我們會發送重設密碼的連結</p>
             <div>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="電子郵件地址" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-warning 按鈕顏色" type="button" id="send">送出</button>
+                    <input type="text" class="form-control" id="fgmail" placeholder="電子郵件地址" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-warning 按鈕顏色" onclick="fg()" type="button" id="send">送出</button>
                 </div>
 
 
@@ -27,11 +27,44 @@
         </div>
     </div>
 </body>
+@section Scripts{
+    <script>
 
-<script>
-    let send = document.querySelector("#send");
-    send.addEventListener("click", () => {
-        alert("信件已送出，請查收")
-    })
+    function fg()
+    {
+        
+       var mm =
+        {
+            Email: $("#fgmail").val()
+        }
+       
+        $.ajax({
+            url: '@Url.Action("Forgetpas", "CustomerCenter")',
+            method: 'Post',
+            dataType: 'Json',
+            data: { Mem: mm },
+            success: function (datas)
+            {
+                if (!datas.res) {
+                    Swal.fire({
+                        icon: 'error',
+                        title: '帳號不存在',
+                        text: '請確認帳號正確',
+                    })
+                    return
+                }
+                else {
+                    Swal.fire(
+                        '驗證信已寄出!',
+                        '',
+                        'success'
+                    )
+                }
+                
+            }
+        })
+    }
 
-</script>
+    </script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+}
