--- a/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/MyFavorites/Default.cshtml
@@ -13,7 +13,7 @@
 <link href="~/css/客戶中心訂單內容物.css" rel="stylesheet" />
 <link href="~/css/客服中心.css" rel="stylesheet" />
 
-
+@*<svg width='12' height='12' class='svg-icon'></svg>*@
 
 <body>
 
@@ -21,58 +21,58 @@
         <h3>我的最愛</h3>
         <div class="container row row-row-4">
             <div class="col-12 上面空間 d-flex justify-content-start">
-                <div class='row'>
-                    
+                <div class='row asd'>
+
                     @{
                         var i = 0;
                         List<string> Dow = new List<string>();
                         foreach (var ab in Model.商品列表)//有錢字號才能用{}取得值 如果用MODEL.出來的物件不能用@會跟RAZOR混亂 所以用AB變數
                         {
                             Dow.Add($@"
-                                              <div class='card'>
-                                            <img class='card-img-top' src='https://localhost:44338/images/TravelProductPictures/{ab.TravelPicturePath}' height='120px' alt='Card image cap'>
-                                                <div class='card-body'>
-                                             <a href='/shopping/List?TravelProductId={ab.TravelProductId}&MembersId={ab.MembersId}'>
-                                             <h3 class='activity-card-title'>
-                                                {ab.TravelProductName}
-                                               </h3>
-                                                </a>
-                                               <div class='page-activity-recommend-score'>
-                                                <span class='page-activity-recommend-score-number'>
-                                                    <svg width='12' height='12' class='svg-icon'></svg>
-                                                    <span class='score-rate'>4.7</span>
-                                                </span>
-                                                <span class='page-activity-recommend-review-number'>
-                                                    (
-                                                    <span class='review-number'>30K+ 則評價</span>
-                                                    )
-                                                </span>
-                                            </div>
-                                            <div class='activity-card-bottom'>
-                                                <div>
-                                                    <div class='activity-card-price-box home-activity-card_price small-card'>
-                                                        <span class='activity-card-price-box__sell-price dynamic-width-price'>NT${Convert.ToInt32(ab.Price)}</span>
-                                                        <div id='cancel'>
+                                                          <div class='card cd'>
+                                                        <img class='card-img-top' src='https://localhost:44338/images/TravelProductPictures/{ab.TravelPicturePath}' height='120px' alt='Card image cap'>
+                                                            <div class='card-body'>
+                                                         <a href='/shopping/List?TravelProductId={ab.TravelProductId}&MembersId={ab.MembersId}'>
+                                                         <h3 class='activity-card-title'>
+                                                            {ab.TravelProductName}
+                                                           </h3>
+                                                            </a>
+                                                           <div class='page-activity-recommend-score'>
+                                                            <span class='page-activity-recommend-score-number'>
 
-                                                         <button class='btn btn-warning' onclick='favC({ab.MyfavoritesID})'>移除收藏</button>
+                                                                <span class='score-rate'>4.7</span>
+                                                            </span>
+                                                            <span class='page-activity-recommend-review-number'>
+                                                                (
+                                                                <span class='review-number'>30K+ 則評價</span>
+                                                                )
+                                                            </span>
                                                         </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class='tagging-wrap bottom-tag small-style'>
-                                                <div class='tagging-box'>
-                                                    <div text='最優價格保證' color='#FF5B00' backgroundcolor='rgba(255, 240, 229, 255)' bordercolor='#FFF0E5' borderradius='4px' maxwidth='auto' class='tagging-tag small-style'>
-                                                        <div class='tagging-tag_custom' style='max-width:auto;color:#FF5B00;border-color:#FFF0E5;background-color:rgba(255, 240, 229, 255);border-radius:4px;'>最優價格保證</div>
+                                                        <div class='activity-card-bottom'>
+                                                            <div>
+                                                                <div class='activity-card-price-box home-activity-card_price small-card'>
+                                                                    <span class='activity-card-price-box__sell-price dynamic-width-price'>NT${Convert.ToInt32(ab.Price)}</span>
+                                                                    <div id='cancel'>
 
-                                                    </div>
+                                                                     <button class='btn btn-warning' onclick='favC({ab.MyfavoritesID})'>移除收藏</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class='tagging-wrap bottom-tag small-style'>
+                                                            <div class='tagging-box'>
+                                                                <div text='最優價格保證' color='#FF5B00' backgroundcolor='rgba(255, 240, 229, 255)' bordercolor='#FFF0E5' borderradius='4px' maxwidth='auto' class='tagging-tag small-style'>
+                                                                    <div class='tagging-tag_custom' style='max-width:auto;color:#FF5B00;border-color:#FFF0E5;background-color:rgba(255, 240, 229, 255);border-radius:4px;'>最優價格保證</div>
 
-                                                </div>
-                                            </div>
-                                          </div>
+                                                                </div>
 
-                                           </div>
+                                                            </div>
+                                                        </div>
+                                                      </div>
 
-                                                            ");
+                                                       </div>
+
+                                                                        ");
                             i++;
                         }
                         @foreach (var g in Dow)//重複執行Dow內的資料
@@ -120,7 +120,7 @@
             data:{id:id},
 
         }).then(function () {
-            
+
             $('#cont').load('@Url.Action("LMyFavorites", "CustomerCenter",new {v.MembersId})')
         })
 
