--- a/MIST143_Traveler/wwwroot/css/會員中心/我的最愛卡片.css
+++ b/MIST143_Traveler/wwwroot/css/會員中心/我的最愛卡片.css
@@ -1,238 +1,22 @@
 ﻿/* 開始複製，注意一開始*{}代表全部margin、padding歸0 */
-/** {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;*/
-/* border: 1px solid red; */
-/*font-family: Georgia, "Times New Roman", Times, serif;
-}
 
-.border-bottom-line {
-    border-bottom: 2px solid rgba(225, 221, 221, 0.622);
-    border-bottom: 2px solid rgba(225, 221, 221, 0.622);
-}*/
-/* header的css範圍 */
-/*.main-header .container {
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 20px;
-    max-width: 1200px;
-    margin: auto;
-}
 
-.ban-sea-box {
-    margin-top: 3%;
-}
-
-.main-header .logo {
-    max-width: 70px;
-}
-
-    .main-header .logo img {
-        width: 100%;
-        vertical-align: middle;
-    }
-*/
-/*.main-header .main-nav {
-    margin-left: auto;
-}
-
-    .main-header .main-nav a {
-        text-decoration: none;
-        padding: 10px 0.8em;
-        border-radius: 15px;
-        font-size: 15px;
-        color: rgb(16, 22, 22);
-    }
-
-        .main-header .main-nav a:hover {
-            background-color: rgba(200, 198, 198, 0.571);
-        }
-
-        .main-header .main-nav a:nth-child(5) {
-            background-color: coral;
-            color: aliceblue;
-        }*/
-
-/*.main-header .header-search {
-    margin-left: 15px;
-}
-
-    .main-header .header-search .header-search-box {
-        display: flex;
-        position: relative;
-        border-radius: 100px;
-        border: 1px solid rgba(238, 236, 236, 0.888);
-        background-color: rgba(238, 236, 236, 0.888);
-    }
-
-        .main-header .header-search .header-search-box:hover,
-        .main-header .header-search .header-search-box input:focus {
-            background-color: white;
-            border: 1px solid orange;
-        }
-
-        .main-header .header-search .header-search-box button,
-        .main-header .header-search .header-search-box input {
-            border: none;
-            padding: 5px 10px;
-            background-color: transparent;
-            outline: none;
-        }
-
-        .main-header .header-search .header-search-box button {
-            position: absolute;
-            transform: translateX(20%);
-        }
-
-        .main-header .header-search .header-search-box input {
-            border-radius: 100px;
-            width: 20em;
-            text-indent: 3em;
-        }*/
-
-/*.secondary-nav {
-    width: 1200px;
-    height: 50px;
-    margin: auto;
-}*/
-
-/*.secondary-nav-container {
-    padding: 15px 0.8em;
-}
-
-    .secondary-nav-container li {
-        display: inline;
-        padding: 10px 0.8em;
-        border-radius: 15px;
-        font-size: 16px;
-        color: rgb(16, 22, 22);
-    }
-
-    .secondary-nav-container a,
-    .secondary-nav-container a:hover {
-        text-decoration: none;
-        color: black;
-    }
-
-    .secondary-nav-container li:hover {
-        background-color: rgba(200, 198, 198, 0.571);
-    }*/
-/* header的css範圍 */
-
-/* footer的css範圍 */
-/*.main-footer {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.default-footer {
-    width: 1200px;
-    display: flex;
-    justify-content: space-between;
-    font-size: 12px;
-    color: rgb(122, 122, 128);
-}*/
-
-/*.default-footer_copyright {
-    width: 250px;
-}
-
-.default-footer_internal_links {
-    display: flex;
-}
-
-.default-footer_links {
-    margin: 0px 40px;
-}
-
-    .default-footer_links ul,
-    .default-footer_links li {
-        margin: 0px;
-        padding: 10px 0 0 0;
-    }
-
-.footer_label {
-    font-weight: bold;
-}
-
-.subcribe_email input {
-    border: 1px solid rgba(225, 221, 221, 0.622);
-    width: 20em;
-    padding: 5px 10px;
-    border-radius: 5px 0 0 5px;
-    background-color: rgba(225, 221, 221, 0.622);
-    outline: none;
-    margin-bottom: 15px;
-}
-
-.subcribe_email button {
-    border-radius: 0 5px 5px 0;
-    border: 1px solid coral;
-    border: none;
-    padding: 5px 10px;
-    outline: none;
-    background-color: coral;
-    color: aliceblue;
-    font-size: 13px;
-}
-
-.subcribe_email input:hover,
-.subcribe_email input:focus {
-    background-color: white;
-    border: 1px solid orange;
-}
-
-.footer_paymentInfo {
-    display: flex;
-    justify-content: space-between;
-}
-
-    .footer_paymentInfo li {
-        font-size: 40px;
-        margin-right: 50px;
-    }*/
-/* footer的css範圍 */
-/*.test {*/
-    /* display:flex;*/
-    /*justify-content: center;*/
-}
-
-/*.cargimg {
-    margin: auto;
-    padding: initial;
-}
-
-.expend_test {*/
-    /*background: url('category.jpg') no-repeat center center;*/
-    /*background: url('category.jpg') no-repeat center center;
-    width: 100%;
-}
-
-.expend_test2 {
-    padding: 1000px;
-    margin: 500px;
-}*/
-
-/*.card {
+.card {
     margin: 0 auto;
     margin: 2px;
     border-radius: 4px;
-}*/
+}
 
-/*.asd {
-    display: flex;*/
-    /*align-content: center;*/
-    /*flex-wrap: wrap;
-    max-width: 1200px;*/
-    /*padding: 40px;*/
-    /*border:20px;
+.asd {
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    padding: 40px;
+    border:20px;
     border-block-color:aquamarine;
     
-}*/
+}
 
 .card {
    /* margin: 0 auto;*/
@@ -240,15 +24,15 @@
   /*  height: 310px;*/
 }
 
-/*img {
-    margin-bottom: 8px;
-    max-width: 100%;
-    
-
-}*/
 
 
-/*.activity-card-title {
+.cd
+{
+  margin-bottom:30px;
+  margin-right:30px;
+}
+
+.activity-card-title {
     width: 100%;
     font-weight: 600;
     font-size: 16px;
@@ -259,7 +43,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-}*/
+}
 
 /*.title {
     width: 145px;
@@ -329,22 +113,22 @@
 
 /*.activity-card-bottom {
     padding-top: 12px;
-}*/
+}
 
-/*.activity-card-price-box.small-card {
+.activity-card-price-box.small-card {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
     flex-wrap: nowrap;
     -webkit-box-align: start;
     align-items: flex-start;
-}
+}*/
 
-.dynamic-width-price {
+/*.dynamic-width-price {
     margin-bottom: 2px;
-}
+}*/
 
-.activity-card-price-box__sell-price {
+/*.activity-card-price-box__sell-price {
     font-size: 16px;
     line-height: 23px;
     color: #212121;
@@ -358,6 +142,7 @@
     text-decoration: line-through;
 }*/
 /*
+    
 .tagging-wrap {
     overflow: hidden;
 }
@@ -404,22 +189,22 @@
     word-break: break-all;
 }
 */
-/*.cardimg-top {
+.cardimg-top {
     margin: 0 auto;
     position: absolute;
     display: flex;
     
 
-}*/
+}
 
 
-/*.cardsize {
+.cardsize {
     text-align: center;
     margin: 0 auto;
     width: 50px;
     height: 20px;
 }
-*/
+
 /*.experience-menu-name {*/
     /*   
     margin: auto;
@@ -587,293 +372,4 @@
     cursor: pointer;
 }
 
-.search-suggest-container {
-    position: absolute;
-    top: 68px;
-    left: 16px;
-    width: 770px;
-    z-index: 100;
-    background-color: #fff;
-    overflow: hidden;
-    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 8%);
-    border-radius: 8px;
-}
-
-.header-search-box-desktop .input-box {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: start;
-    justify-content: flex-start;
-    width: 800px;
-    height: 56px;
-    margin-right: 10px;
-    background-color: #fff;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    padding-left: 16px;
-}
-
-#menu {
-    position: fixed;
-    right: 0;
-    top: 50%;
-    width: 8em;
-    margin-top: -2.5em;
-}
-
-.destination-tips-popup-new {
-    position: absolute;
-    -webkit-transform: translate(100%,-50%);
-    transform: translate(100%,-50%);
-    right: -12px;
-    top: 50%;
-    width: max-content;
-    cursor: pointer;
-}
-
-.destination-tips-new {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    padding: 8px 8px 8px 16px;
-    border-radius: 8px;
-    background: #fff;
-}
-
-    .destination-tips-new .destination-tips_title {
-        font-size: 14px;
-        line-height: 1.44;
-        font-weight: 400;
-        margin: 0 8px 0 0;
-        color: #212121;
-        -webkit-box-flex: 0;
-        flex: none;
-        text-align: left;
-    }
-
-    .destination-tips-new .destination-tips_buttons {
-        font-size: 0;
-    }
-
-    .destination-tips-new .destination-tips_link {
-        margin: 0;
-    }*/
-
-/*
-
-.experience-activity-card-section.desktop {
-    margin-top: 25px;
-}
-
-.experience-activity-card-section {
-    margin-top: 72px;
-}*/
-
-/*html,
-body {
-    height: 100%;
-}
-
-.overlay {
-    position: fixed;
-    display: none;
-    top: 0;
-    height: 100%;
-    width: 75%;
-    bottom: 0;
-    margin: initial auto;
-    background: rgba(0, 0, 0, 0.8);
-    z-index: 2;
-}
-
-.popup {
-    position: absolute;
-    width: 50%;
-    height: 50%;
-    top: 25%;
-    left: 25%;
-    text-align: center;
-    background: white;
-}
-
-    .popup h3 {
-        font-size: 15px;
-        height: 1000px;
-        line-height: 50px;
-        color: black;
-    }
-
-.CloseIcon {
-    cursor: pointer;
-    display: flex;
-}
-
-.view-all-button {
-    position: -webkit-sticky;
-    position: sticky;
-    text-align: center;
-    bottom: 30px;
-    z-index: 2;
-}
-
-.destination-guide-button.desktop .destination-guide-button_main {
-    text-align: center;
-    margin-left: 50%;
-    margin-right: 50%;
-    margin: auto;
-    width: 100%;
-    display: -webkit-inline-box;
-    display: inline-flex;
-    -webkit-box-flex: 0;
-    flex: 0 0 100px;
-}
-
-.experience-destination-modal .destination-search-input {
-    border-radius: 8px 8px 4px 4px;
-    border-color: #eee;
-}
-
-.destination-search-input {
-    border-radius: 4px;
-    width: 80%;
-    height: 50px;
-    padding-left: 49px;
-    margin: 0;
-    border: 1px solid #e0e0e0;
-    box-sizing: border-box;
-    outline: none;
-    font-size: 16px;
-    line-height: 1;
-}
-
-.search-box-recommend {
-    max-height: 348px;
-    overflow-y: auto;
-}
-
-
-
-.search-box-recommend {
-    display: -webkit-box;
-    display: flex;
-    height: 406px;
-}
-
-.search-box-recommend_left {
-    width: 44%;
-    border-right: 1px solid #eee;
-    float: left;
-}
-
-blockquote, dd, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, table, td, th, ul {
-    margin: 0;
-    padding: 0;
-}
-
-.poli {
-    display: list-item;
-    text-align: -webkit-match-parent;
-}
-
-ol, ul {
-    list-style-type: none;
-}
-
-.search-box-recommend_groups {
-    margin: auto;
-    width: 115.2px;
-}
-
-    .search-box-recommend_groups > li.active {
-        background-color: #ff5b00;
-        color: #fff;
-    }
-
-
-    .search-box-recommend_groups > li {
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        flex-direction: column;
-        -webkit-box-pack: center;
-        justify-content: center;
-        position: relative;
-        height: 58px;
-        padding-left: 24px;
-        padding-right: 6px;
-        line-height: 1.2;
-    }
-
-        .search-box-recommend_groups > li.active .search-box-recommend_cities {
-            color: inherit;
-        }
-
-
-.search-box-recommend_cities {
-    margin-top: 4px;
-    color: #757575;
-    font-size: 12px;
-}
-
-b, strong {
-    font-weight: 600;
-}
-
-.search-box-recommend_right {
-    -webkit-box-flex: 1;
-    float: left;
-    width: 56%;
-    padding: 14px 24px 24px;
-    overflow-y: auto;
-}
-
-
-.area-selector {
-    width: 100%;
-}
-
-.area-selector_label {
-    left: 0px;
-}
-
-.area-selector_country .area-selector_country:lang(zh-Hans-CN), .area-selector_country:lang(zh-Hant-HK), .area-selector_country:lang(zh-Hant-TW) {
-    float: left;
-    width: 14%;
-}
-
-.area-selector_cities {
-    -webkit-box-flex: 1;
-    float: left;
-    margin-right: 50px;
-    width: 86%;
-    flex: 1;
-}
-
-.flgd {
-    width: 300px;*/
-    /*    border:3px solid red;*/
-    /*padding: 10px;
-    margin: 10px 10px 10px 10px;
-    float: right;
-}
-
-#menu {
-    position: fixed;
-    right: 0;
-    top: 50%;
-    width: 8em;
-    margin-top: -2.5em;
-}
-
-.area_button {
-    margin-left: 45%;
-    width: 8em;
-}
-
-.myMOUSE {
-    cursor: pointer;
-}*/
+.
